--- a/package.json
+++ b/package.json
@@ -52,13 +52,13 @@
     "i18next": "^25.6.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
-    "next": "16.0.1",
+    "next": "^16.1.1",
     "next-i18next": "^15.4.2",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
-    "react": "19.2.0",
+    "react": "^19.2.3",
     "react-day-picker": "^9.4.0",
-    "react-dom": "19.2.0",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.55.0",
     "react-i18next": "^16.3.5",
     "react-icons": "^5.4.0",
